Fixes #61, #62: Make save button always visible, and fix input validation.

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -687,3 +687,20 @@ ul[ng-sortable] li *, i.fa.fa-bars {
     font-size: 18px;
   }
 
+
+  #formblock {
+    margin-bottom: 60px;
+  }
+
+  #saveblock {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 83%;
+    height: 45px;
+    border-top: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    padding: 10px 20px;
+    background-color: #f6f6f6;
+    z-index: 5;
+  }
